# cacatoid

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cacatoid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  base58.cpp  bitcoin_searcher.cpp  ripemd160.h  secp256k1_utils.h  sha256.cpp
app/src/main/java/com/example/cacatoid/: MainActivity.kt  NativeBridge.kt  SearchService.kt  SearchState.kt  SearchViewModel.kt
app/src/main/res/drawable/: bg_badge_circle.xml  bg_code_box.xml  ic_bolt.xml  ic_check_circle.xml  ic_key.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stop.xml  ic_storage.xml  ic_target.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/example/cacatoid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  build_deps.sh
ios/Cacatoid/: Cacatoid-Bridging-Header.h  CacatoidApp.swift  ContentView.swift  Info.plist  SearchViewModel.swift
ios/Cacatoid.xcodeproj/: project.pbxproj
ios/Cacatoid/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Cacatoid/Native/: base58.h  ripemd160.cpp  searcher.cpp  searcher_bridge.h  secp256k1_utils.cpp  sha256.h
